fix: complete JniWasiInstance interface implementation
- Replace Map.copyOf() with Collections.unmodifiableMap(new HashMap<>()) for Java 8 compatibility
- Add missing methods to WasiFunctionMetadata anonymous implementation:
  - validateParameters()
  - getThrownExceptionTypes()
  - canThrow()
  - getReturnType()
- Add missing methods to WasiResource anonymous implementation:
  - getOwner(), isOwned(), getCreatedAt(), getLastAccessedAt()
  - getMetadata(), getState(), getStats(), invoke(), getAvailableOperations()
  - createHandle(), transferOwnership() with complete validation
- Add missing methods to WasiInstanceStats anonymous implementation:
  - getSummary(), getCustomProperties(), getMemoryEfficiency()
- Fix WasiMemoryInfo method names to match interface:
  - getAllocatedBytes() -> getCurrentUsage()
  - getPeakBytes() -> getPeakUsage()
  - getLimitBytes() -> getLimit() returning Optional<Long>
  - getUsageRatio() -> getUsagePercentage() returning Optional<Double>
- Move static NEXT_RESOURCE_ID out of anonymous class
- Add required imports for new WASI types
- All interface implementations now complete and should compile

Issue #104